# llm-evaluation

./: .gitattributes  .gitignore  ANALISIS_GPT_VALIDACION.txt  CHANGELOG.md  README.md  TUTORIAL.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  tests.yml
docs/: ACADEMIC_USAGE.md  API.md  FULL_BENCHMARKS.md  LIMITATIONS.md  PROVIDERS.md  QUICKSTART.md  README.md  TESTING_GUIDE.md
examples/: README.md  academic_evaluation.py  compare_models.py  demo.py  demo_full_benchmarks.py  demo_visualizations.py  demo_vs_real.py  quick_compare.py  regenerate_dashboard.py  run_full_comparison.py  run_sample_comparison.py
posts/: GIF_ANIMADO_README.md  RESUMEN_IMPLEMENTACION.md  VIDEO_DEMO_30_SEGUNDOS.md  devto_article.md  linkedin_launch.md
src/llm_evaluator/: __init__.py  academic_baselines.py  benchmarks.py  cli.py  config.py  dataset_loaders.py  error_analysis.py  evaluator.py  export.py  metrics.py  statistical_metrics.py  system_info.py  visualizations.py
src/llm_evaluator/benchmarks/: __init__.py  arc.py  bacup.txt  base.py  boolq.py  commonsenseqa.py  donotanswer.py  gsm8k.py  hellaswag.py  mmlu.py  runner.py  safetybench.py  truthfulqa.py  winogrande.py
src/llm_evaluator/benchmarks/benchmark_docs/: donotanswerREADME.md
src/llm_evaluator/dashboard/: app.py  model_discovery.py  models.py  runner.py
src/llm_evaluator/dashboard/static/assets/: index-6rBrVz97.js  index-DTAEbcY7.js
src/llm_evaluator/providers/: __init__.py  anthropic_provider.py  base.py  cached_provider.py  deepseek_provider.py  fireworks_provider.py  gemini_provider.py  groq_provider.py  huggingface_provider.py  ollama_provider.py  openai_provider.py  together_provider.py
src/llm_evaluator/security/: __init__.py  pii_detector.py  prompt_injection.py  red_team.py  toxicity.py
tests/: conftest.py  mocks.py  test_academic_baselines_extended.py  test_academic_features.py  test_anthropic_provider.py  test_benchmarks.py  test_benchmarks_extended.py  test_cached_provider.py  test_cached_provider_extended.py  test_cli.py  test_cli_commands.py  test_cli_comprehensive.py  test_cli_coverage.py  test_cli_extended.py  test_cli_more.py  test_config.py  test_config_comprehensive.py  test_config_extended.py  test_coverage_boost.py  test_deepseek_provider.py  test_evaluator.py  test_evaluator_comprehensive.py  test_evaluator_extended.py  test_evaluator_more.py  test_export_extended.py  test_full_benchmarks.py  test_gemini_provider.py  test_huggingface_provider.py  test_integration.py  test_metrics.py  test_metrics_extended.py  test_ollama_provider.py  test_ollama_provider_extended.py  test_openai_provider.py  test_providers_comprehensive.py  test_providers_init.py  test_security_injection.py  test_security_red_team.py  test_statistical_metrics_extended.py  test_system_info.py  (+2 more)
ui/: tailwind.config.js
ui/src/: App.jsx  index.css
ui/src/components/: ApiKeysModal.jsx  DeleteConfirmModal.jsx  ModelComparison.jsx  ProgressViewer.jsx  QueueBuilder.jsx  RunDetail.jsx  RunHistory.jsx  RunManager.jsx  ScenariosViewer.jsx
ui/src/components/ui/: index.jsx
